# FunnyBlockGame

./: CMakeLists.txt  CMakePresets.json  FunnyBlockGame.cpp  README.md  exitCode  glad.c  ideaPage
funnyblockgame/client/: Block.cpp  Block.h  BlockArray.cpp  BlockArray.h  BlockData.cpp  BlockData.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Client.cpp  Client.h  InputManager.cpp  InputManager.h  ResourceLocation.h  RessourceManager.cpp  RessourceManager.h  Window.cpp  Window.h  WorldManager.cpp  WorldManager.h
funnyblockgame/client/rendering/: Camera.h  Mesh.cpp  Mesh.h  Mesher.cpp  Mesher.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h
funnyblockgame/client/rendering/shaders/: fragmentShader.glsl  vertexShader.glsl
funnyblockgame/utils/: DeltaTime.cpp  DeltaTime.h  Direction.h
includes/glad/: glad.h
